[gd_scene load_steps=11 format=3 uid="uid://chu7lmy5exxyd"]

[ext_resource type="Script" uid="uid://ht1m7w652qgx" path="res://enemies/flying_enemy.gd" id="1_68jxg"]
[ext_resource type="PackedScene" uid="uid://dh1j4vxa3twpx" path="res://enemies/dead_prop.tscn" id="2_cob4l"]
[ext_resource type="Texture2D" uid="uid://deiob5s37gpg5" path="res://enemies/flying-enemy-sheet2.png" id="3_cob4l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lm5qs"]
size = Vector2(20, 14.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ivnom"]
size = Vector2(40, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hoquq"]
size = Vector2(25, 15)

[sub_resource type="Animation" id="Animation_23qbq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hurtbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_68jxg"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 0, 3, 2]
}

[sub_resource type="Animation" id="Animation_pt75s"]
resource_name = "death"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hurtbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.033333335),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.033333335),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.4),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"spawn_props"
}, {
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lm5qs"]
_data = {
&"RESET": SubResource("Animation_23qbq"),
&"death": SubResource("Animation_pt75s"),
&"idle": SubResource("Animation_68jxg")
}

[node name="FlyingEnemy" type="RigidBody2D" groups=["enemies_"]]
collision_layer = 18
collision_mask = 18
gravity_scale = 0.0
script = ExtResource("1_68jxg")
dead_prop_scene = ExtResource("2_cob4l")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_cob4l")
hframes = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_lm5qs")

[node name="MoveTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Hitbox" type="Area2D" parent="." groups=["enemies_"]]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_ivnom")

[node name="Hurtbox" type="Area2D" parent="." groups=["enemies_"]]
collision_layer = 0
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-0.5, -3.5)
shape = SubResource("RectangleShape2D_hoquq")
debug_color = Color(0.9071432, 0.040467806, 0.7287439, 0.41960785)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_lm5qs")
}
autoplay = "idle"

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
